...
                                </constraints>
                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="34"/>
                                <state key="normal" title="ENTRAR">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="emailTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="e-mail" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PxI-oZ-H8I" customClass="TextField" customModule="Chal
                                <rect key="frame" x="0.0" y="277" width="375" height="42"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.4139695028410959" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="passwordTextField" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="senha" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C3h-yb-2b6" customClass="TextField" customModule="Ch
                                <rect key="frame" x="0.0" y="330" width="375" height="42"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.40166712182876707" colorSpace="custom" customColorSpace="sRGB"/>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo Acola Certinha" translatesAutoresizingMaskIntoConstraints="NO" id="1qv-H9-GvI">
                                <rect key="frame" x="31" y="29" width="313" height="199"/>
                                <accessibility key="accessibilityConfiguration" label="acolaImage">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="128" y="487" width="119" height="30"/>
                                <fontDescription key="fontDescription" name="GillSans-Light" family="Gill Sans" pointSize="15"/>
                                <state key="normal" title="quero me cadastrar!">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="boddi_feliz" translatesAutoresizingMaskIntoConstraints="NO" id="YHZ-Zp-4b3">
                                <rect key="frame" x="219" y="217" width="100" height="100"/>
                                <accessibility key="accessibilityConfiguration" label="boddiImage">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                                <rect key="frame" x="0.0" y="348" width="375" height="145"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Qual é o seu nome?" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a8d-j0-lT3" customClass="TextField" customModule="ChallengeHealth" custom
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.36923491380000001" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="34"/>
                                        <state key="normal" title="OLÁ!">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="confirmar senha" textAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a0J-OL-Acn" customClass="TextField" customModule="ChallengeHealth" customMod
                                        <rect key="frame" x="0.0" y="104" width="375" height="42"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.36605603450000002" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="34"/>
                                        <state key="normal" title="TUDO CERTO">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
