...
        // esconde o teclado
        emailTextField.resignFirstResponder()
        passwordTextField.resignFirstResponder()
        
        
        if (email == "" || password == "") {
            let alertView = UIAlertController(title: "erro 1 - Problema no login",
                                              message: "Preencha todos os campos." as String, preferredStyle:.alert)
            let okAction = UIAlertAction(title: "Tentar novamente", style: .default, handler: nil)
            alertView.addAction(okAction)
            self.present(alertView, animated: true, completion: nil)
            
            self.activityIndicatorView.stopAnimating()
...
                
                Auth.auth().removeStateDidChangeListener(handle)
            }
                
                // DEU RUIM
            else {
                let alert = UIAlertController(title: "erro 0 - Problema no login", message: "Combinação email-senha não reconhecida.", preferredStyle: UIAlertController.Style.alert)
                let cancel = UIAlertAction(title: "Tentar novamente", style: UIAlertAction.Style.cancel, handler: nil)
                
                alert.addAction(cancel)
                self.present(alert, animated: true, completion: nil)
                self.activityIndicatorView.stopAnimating()
            }
...
